samples/_failures_safe/1761593737_50e023_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c89714e.c: In function ‘transition_state’:
./samples/SAFE/__tmp_5c89714e.c:176:14: error: ‘STATE’ undeclared (first use in this function)
  176 |         case STATE
      |              ^~~~~
./samples/SAFE/__tmp_5c89714e.c:176:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5c89714e.c:176:9: error: expected ‘:’ or ‘...’ at end of input
  176 |         case STATE
      |         ^~~~
./samples/SAFE/__tmp_5c89714e.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c89714e.c:176:9: error: expected declaration or statement at end of input
